# aws-encryption-sdk-dafny

./: .gitignore  .gitmodules  .releaserc.cjs  CONTRIBUTING.md  Dockerfile  EncryptionSDK.sln  Makefile  NOTICE  README.md  SUPPORT_POLICY.rst  SharedMakefile.mk  SharedMakefileV2.mk  bench.pom.xml  build.gradle  build.xml  buildspec.yml  duvet_report.sh  nuget.config  packages.config  project.properties  settings.gradle  verification-times-from-trx.py
AwsEncryptionSDK/runtimes/rust/: .gitignore  Cargo.toml  README.md
AwsEncryptionSDK/runtimes/rust/examples/: README.md  limit_encrypted_data_keys_example.rs  main.rs  set_commitment_policy_example.rs  set_encryption_algorithm_suite_example.rs
AwsEncryptionSDK/runtimes/rust/examples/client_supplier/: client_supplier_example.rs  mod.rs  regional_role_client_supplier.rs  regional_role_client_supplier_config.rs
AwsEncryptionSDK/runtimes/rust/examples/cryptographic_materials_manager/: mod.rs
AwsEncryptionSDK/runtimes/rust/examples/example_utils/: utils.rs
AwsEncryptionSDK/runtimes/rust/examples/keyring/: aws_kms_discovery_keyring.rs  aws_kms_discovery_keyring_example.rs  aws_kms_discovery_multi_keyring.rs  aws_kms_keyring.rs  mod.rs  (+20 more)
AwsEncryptionSDK/runtimes/rust/src/: aes_gcm.rs  aes_kdf_ctr.rs  client.rs  concurrent_call.rs  conversions.rs  dafny_libraries.rs  ddb.rs  deps.rs  digest.rs  ecdh.rs  ecdsa.rs  hmac.rs  kms.rs  local_cmc.rs  operation.rs  random.rs  rsa.rs  sets.rs  software_externs.rs  standard_library_conversions.rs  standard_library_externs.rs  storm_tracker.rs  time.rs  types.rs  uuid.rs
(+1177 files in other folders)
