[package]
name = "aws-esdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
keywords = ["crypto", "cryptography", "security", "dynamodb", "ddb", "encryption", "client-side", "clientside"]
license = "ISC AND (Apache-2.0 OR ISC)"
description = "aws-esdk is a library for implementing client side encryption."
homepage = "https://github.com/aws/aws-encryption-sdk-dafny"
repository = "https://github.com/aws/aws-encryption-sdk-dafny"
authors = ["AWS-CryptoTools"]
documentation = "https://docs.rs/crate/aws-esdk"
autoexamples = false
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.5.6"
aws-lc-rs = "1.9.0"
aws-lc-sys = "0.21.2"
aws-sdk-dynamodb = "1.47.0"
aws-sdk-kms = "1.44.0"
aws-smithy-runtime-api = {version = "1.7.2", features = ["client"] }
aws-smithy-types = "1.2.6"
chrono = "0.4.38"
dafny_runtime = { path = "dafny_runtime_rust"}
dashmap = "6.1.0"
pem = "3.0.4"
rand = "0.8.5"
tokio = {version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[lib]
path = "src/implementation_from_dafny.rs"

[[example]]
name = "main"
